--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cardsforhumanity",
   "description": "A Game For Horrible People Desperately Trying To Do Good",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "author": "cardsforhumanity",
   "repository": {
@@ -9,8 +9,8 @@
     "url": "https://github.com/cardsforhumanity/cardsforhumanity.git"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.2.x"
+    "node": "6.11.x",
+    "npm": "4.1.x"
   },
   "scripts": {
     "start": "node node_modules/grunt-cli/bin/grunt",
@@ -18,31 +18,32 @@
     "postinstall": "node node_modules/grunt-cli/bin/grunt install"
   },
   "dependencies": {
-    "express": "~3.4.0",
-    "jade": "~0.35.0",
-    "bower": "~1.3.8",
-    "mongoose": "~3.6.20",
-    "connect-mongo": "~0.3.3",
-    "connect-flash": "~0.1.1",
-    "passport": "~0.1.17",
-    "passport-local": "~0.1.6",
-    "passport-facebook": "~2.0.0",
-    "passport-twitter": "~1.0.2",
-    "passport-github": "~0.1.5",
-    "passport-google-oauth": "~0.1.5",
-    "underscore": "~1.5.2",
     "async": "~0.2.9",
-    "view-helpers": "~0.1.3",
-    "mean-logger": "~0.0.1",
+    "bcryptjs": "~1.0.4",
+    "bower": "~1.3.8",
+    "connect-flash": "~0.1.1",
+    "connect-mongo": "~0.3.3",
+    "console-stamp": "~0.1.1",
+    "dotenv-extended": "^2.0.1",
+    "express": "~3.4.0",
     "forever": "latest",
     "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.9",
     "grunt-bower-task": "~0.4.0",
-    "socket.io": "~0.9.16",
-    "bcryptjs": "~1.0.4",
-    "socket.io-client": "~0.9.16",
+    "grunt-cli": "~0.1.9",
+    "jade": "~0.35.0",
+    "mean-logger": "~0.0.1",
+    "mongoose": "~3.6.20",
+    "passport": "~0.1.17",
+    "passport-facebook": "~2.0.0",
+    "passport-github": "~0.1.5",
+    "passport-google-oauth": "~0.1.5",
+    "passport-local": "~0.1.6",
+    "passport-twitter": "~1.0.2",
     "sinon": "~1.7.3",
-    "console-stamp": "~0.1.1"
+    "socket.io": "~0.9.16",
+    "socket.io-client": "~0.9.16",
+    "underscore": "~1.5.2",
+    "view-helpers": "~0.1.3"
   },
   "devDependencies": {
     "supertest": "~0.8.0",
