--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ notifications:
   email: false
   
 before_script:
+  - nvm install 6.11.x
   - npm install bower
   - npm install grunt
   - npm install grunt-bower-task
