--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bcryptjs": "~1.0.4",
     "bower": "~1.3.8",
     "connect-flash": "~0.1.1",
-    "connect-mongo": "~0.3.3",
+    "connect-mongo": "^1.3.2",
     "console-stamp": "~0.1.1",
     "dotenv-extended": "^2.0.1",
     "express": "~3.4.0",
