--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
   "dependencies": {
     "async": "~0.2.9",
     "bcryptjs": "~1.0.4",
-    "bower": "~1.3.8",
+    "bower": "^1.8.4",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^1.3.2",
     "console-stamp": "~0.1.1",
+    "describe": "^1.2.0",
     "dotenv-extended": "^2.0.1",
     "express": "~3.4.0",
     "forever": "latest",
-    "grunt": "~0.4.1",
-    "grunt-bower-task": "~0.4.0",
+    "grunt-bower-task": "^0.5.0",
     "grunt-cli": "~0.1.9",
+    "i": "^0.3.6",
     "jade": "~0.35.0",
     "mean-logger": "~0.0.1",
     "mongoose": "~3.6.20",
@@ -46,14 +47,18 @@
     "view-helpers": "~0.1.3"
   },
   "devDependencies": {
-    "supertest": "~0.8.0",
-    "should": "~1.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-jshint": "~0.6.4",
-    "grunt-nodemon": "~0.1.1",
+    "chai": "^4.2.0",
+    "grunt": "^0.4.5",
     "grunt-concurrent": "~0.4.0",
-    "grunt-mocha-test": "~0.7.0",
-    "grunt": "~0.4.1",
-    "grunt-contrib-sass": "~0.5.0"
+    "grunt-contrib-jshint": "^0.6.5",
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-mocha-istanbul": "^5.0.2",
+    "grunt-mocha-test": "^0.13.3",
+    "grunt-nodemon": "~0.1.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.2.0",
+    "should": "~1.3.0",
+    "supertest": "~0.8.0"
   }
 }
