--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "stable"
- env:
+ - "stable"
+env:
   global:
     - CC_TEST_REPORTER_ID=e686ee9971f90dd596dc7b61717348b05c035deade82f8f4249c552d8ef3c515
 services:
@@ -9,6 +9,9 @@ services:
 install: 
   - npm install
 
+#before_script:
+ 
 script: npm test
 after_success:
   - npm run coverage
+  #- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
