commit added test coverage for code climate

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,14 @@ install:
 
 before_script:
   - sleep 15
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
  
 script: npm test
 after_success:
   - npm run coverage
-  #- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 deploy:
   provider: heroku
   api_key: 2800bc54-ba01-4a65-8f93-9264a1a84741
