--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "start": "node node_modules/grunt-cli/bin/grunt",
     "test": "mocha ./test/ --recursive",
     "postinstall": "node node_modules/grunt-cli/bin/grunt install"
-    
   },
   "dependencies": {
     "async": "~0.2.9",
@@ -27,6 +26,7 @@
     "console-stamp": "~0.1.1",
     "describe": "^1.2.0",
     "dotenv-extended": "^2.0.1",
+    "expect": "^23.6.0",
     "express": "~3.4.0",
     "forever": "latest",
     "grunt-bower-task": "^0.5.0",
