--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "node node_modules/grunt-cli/bin/grunt",
     "test": "mocha ./test/ --recursive",
-    "postinstall": "node node_modules/grunt-cli/bin/grunt install"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "async": "~0.2.9",
